namespace foll_backend.IAM.Domain.Model.Queries;

public record LoginQuery(string Email, string Password);
